See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.68.00

14.06.29 BJH  Release 10.67.00

              sgitopnm: add ability to convert 2-channel SGI image.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              sgitopnm: add ability to work with non-seekable input (e.g. a
              pipe).  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pamtotiff: add -output, use Standard Output normally (before, it
              had to be seekable.  Also, you could do an append operation to
              Standard Output; now you have to use -output for that).  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamsharpness: put primary output on Standard Output instead of
              on Standard Error as a Netpbm message.

              pamflip: fix bug when built with WANT_SSE=n: column-for-row
              transformations of PBM produce garbage output.  Introduced in
              10.65 (December 2013).

              sgitopnm: fix bug: no output if input is RLE compressed.  Broken
              in Netpbm 10.53 (December 2010).  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              jpegtopnm -dumpexif: fix incorrect display of resolution.
              Always broken.  (-dumpexif was new in Netpbm 9.18 September
              2001).

              jpegtopnm -dumpexif: fix truncated make, model, or datetime.
              Always broken.  (-dumpexif was new in Netpbm 9.18 September
              2001).

              jpegtopnm -dumpexif: fix wild pointer with invalid EXIF data.
              Always broken.  (-dumpexif was new in Netpbm 9.18 September
              2001).

              Windows build: include an icon in every executable.  The icon
              was designed by Ron Vantreese (ait_frog-netpbm@yahoo.com).

              Build: fix bug in which null value is not taken to mean