@@ -6,6 +6,12 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.68.00
 
+              Fix incorrect option parsing when there are multiple common
+              options (e.g. -plain -quiet).  Always broken.  (Possibility of
+              specifying multiple common options that don't cause the program
+              to ignore every other option (like -version) was new in Netpbm
+              10.10 (October 2002).
+
 14.06.29 BJH  Release 10.67.00
 
               sgitopnm: add ability to convert 2-channel SGI image.
